--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ h1,h2
 .grid-container
 {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 20% 60% 20%;
     gap:10px;
     padding: 10px;
     background-color: rgb(247, 255, 241);
