--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1,h2
 .grid-container
 {
     display: grid;
-    grid-template-columns: 20% 40% 20%;
+    grid-template-columns: 20% 40% 20% 10%;
     gap:10px;
     padding: 10px;
     background-color: rgb(247, 255, 241);
