--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,15 @@ h1,h2
 { 
     color:lightcoral;
     text-align: center;
-    
+    font-family: fantasy;
+    font-size: large;
+}
+
+p
+{
+    color: indianred;
+    font-size: 30px;
+    font-family: cursive;
 }
 
 
