--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,18 @@ p
     color: indianred;
     font-size: 30px;
     font-family: cursive;
-}
+} /* color=txt color, font-size=font size, font-family=font */
 
 
 .grid-container
 {
     display: grid;
     grid-template-columns: 20% 30% 20% 10%;
+    grid-template-rows: 10% 20%;
     gap:50px;
     padding: 10px;
     background-color: rgb(247, 255, 241);
-}
+} /* gap= padding=*/
 
 .item
 {
